Fixed scrollbar.

--- a/george.css
+++ b/george.css
@@ -7,7 +7,7 @@ body
         background: url("/media/grandteton.jpg");
         background-size: cover;
         background-repeat: no-repeat;
-        background-position: 50% 50%;
+        background-position: 0 0;
         background-attachment: fixed;
         font-family: "Lato", serif;
         overflow: hidden;
